--- a/src/main/webapp/registrarjefes.html
+++ b/src/main/webapp/registrarjefes.html
@@ -1,5 +1,5 @@
 <div>
-    <h1> Registro de Información Familia </h1>
+    <h1> Registro de Información Jefes </h1>
     <div  ng-controller= "RegistroFamilia as reg">
         <form>
             Nombre: <input type="text" name="fname" ng-model="reg.jefe.nombre" required><br>
