--- a/src/main/webapp/registrorubros.html
+++ b/src/main/webapp/registrorubros.html
@@ -1,5 +1,5 @@
 <div>
-    <h1> Registro de Información Familia </h1>
+    <h1> Registro de Información rubros </h1>
     <div  ng-controller= "controlregistro as reg">
         <form>
             <select name="cabeza">
