--- a/src/main/webapp/registroterrenos.html
+++ b/src/main/webapp/registroterrenos.html
@@ -1,5 +1,5 @@
 <div>
-    <h1> Registro de Información Familia </h1>
+    <h1> Registro de Información Terrenos </h1>
     <div  ng-controller= "RegistrarTerrenos as regter" >
         <form>
             <input type="number" name="tr" ng-model="regter.cabeza" required><br>
