--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,6 +32,7 @@
                         <li><a href="#terreno"><i class="fa fa-comment"></i>Registrar terrenos</a></li>
                         <li><a href="#rubro"><i class="fa fa-comment"></i>Registrsr rubros</a></li>
                         <li><a href="#jefes"><i class="fa fa-comment"></i>Registrsr jefes</a></li>
+                        <li><a href="#progreso"><i class="fa fa-comment"></i>Progresos</a></li>
                     </ul>
                 </div>
             </nav> 
